change document class to paper

--- a/preamble.tex
+++ b/preamble.tex
@@ -11,22 +11,22 @@
 \newcommand{\mca}[1]{\mathcal{#1}}
 \newcommand{\map}[3]{{#1}:{#2}\rightarrow{#3}}
 
-\newtheorem{problem}{Problem}[chapter] 
-\newtheorem{thm}{Theorem}[chapter]
-\newtheorem{prop}{Propsition}[chapter] 
-\newtheorem{lem}{Lemma}[chapter] 
-\newtheorem{cor}{Corollary}[chapter] 
+\newtheorem{problem}{Problem}[section] 
+\newtheorem{thm}{Theorem}[section]
+\newtheorem{prop}{Propsition}[section] 
+\newtheorem{lem}{Lemma}[section] 
+\newtheorem{cor}{Corollary}[section] 
 %\newtheorem{conj}[thm]{Conjecture}
-\newtheorem{exer}{Exercise}[chapter]
+\newtheorem{exer}{Exercise}[section]
 
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}[chapter] 
-\newtheorem{example}{Example}[chapter] 
+\newtheorem{definition}{Definition}[section] 
+%\newtheorem{example}{Example}[section] 
 
-\newtheorem{note}{Note}[chapter] 
+\newtheorem{note}{Note}[section] 
 
 \theoremstyle{remark}
-\newtheorem{remark}{Remark}[chapter] 
+\newtheorem{remark}{Remark}[section] 
 
 \newenvironment{solution}
                {\let\oldqedsymbol=\qedsymbol
