--- a/cmt.tex
+++ b/cmt.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{report}
+\documentclass[12pt]{paper}
 
 \include{preamble}
  
@@ -6,12 +6,16 @@
  
 \title{\textbf{\textit{Centre Manifold Theory}}}
 \author{Regoon Wang, ChemE@UNSW \\ wang.regoon@gmail.com} 
- 
 \maketitle
 
+\begin{abstract}
+Centre Manifold Theory is important.
+\end{abstract} 
+
 \tableofcontents
-\chapter{Intorduction}
-\chapter{Proofs}
-\chapter{Application}
+
+\section{Intorduction}
+\section{Theorems and Proofs}
+\section{Application}
  
 \end{document}
